# sight

./: .env.docker.example  .gitignore  BACKUP.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  check.sh  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
.husky/: pre-commit
backend/: .env.example  CLAUDE.md  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  sonar-project.properties
backend/.scannerwork/: report-task.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0bdc78f0ee44_add_is_platform_admin_to_users.py  231b816fb031_add_contacts_and_telegram_phones_tables_.py  270663abb89c_add_fk_from_conversations_participant_.py  3288c2fdca2d_add_provider_message_id_to_messages_for_.py  47bc4badd4da_key_facts_participant_identifier_to_.py  56d48d3143be_add_questions_table.py  719d9a6da3ed_add_invitations_table.py  72d0ce6fb73e_add_key_facts_table.py  7fefd96ee761_initial_schema.py  9316e604f4a6_drop_embedding_dimensions_from_tenant_.py  a83dce9a149a_enable_row_level_security_on_tenant_.py  b5d5c6a8b4bd_add_tenants_users_and_user_tenants_.py  b969d424a7c7_add_tenant_configs_table.py  c1a619c45aaf_encrypt_telegram_webhook_secret_at_rest.py  c7693c4b0d5f_add_documents_and_chunks_tables_with_.py  cd1f6f375fb6_add_outbox_events_table.py  df384b69b838_widen_encrypted_whatsapp_app_secret_.py  f5c452deacee_add_whatsapp_app_secret_to_tenant_.py
backend/docs/: AI_ORCHESTRATION.md  ARCHITECTURE.md  BUSINESS_OVERVIEW.md  CHANNEL_INTEGRATION.md  ERD.md  RAG_PIPELINE.md  SETUP.md  TENANT_ISOLATION.md
backend/eval/: README.md  __init__.py  corpus.py  db_eval.py  golden_set.json  metrics.py  run.py  types.py
backend/eval/fixtures/: amenities.md  hours.md  membership.md
backend/loadtest/: README.md  k6_smoke.js
backend/scripts/: create_app_role.sql  generate_erd.py
backend/src/: main.py
backend/src/ai/: __init__.py  concurrency.py  gateway.py  types.py
backend/src/ai/agents/: __init__.py  agent.py
backend/src/ai/context/: __init__.py  checkpoint.py  history.py  i18n.py  memory.py  prompts.py
backend/src/ai/tools/: __init__.py  escalate_question.py  remove_key_fact.py  save_key_fact.py  search_documents.py  types.py
backend/src/ai/utils/: sender.py  tenant_llm.py
backend/src/application/admin/: __init__.py  dtos.py
backend/src/application/auth/: __init__.py  commands.py  dtos.py
backend/src/application/conversations/: commands.py  dtos.py  queries.py
backend/src/application/documents/: __init__.py  commands.py  dtos.py  queries.py
backend/src/application/invitations/: __init__.py  dtos.py  mappers.py
backend/src/application/questions/: __init__.py  commands.py  dtos.py  queries.py
backend/src/application/shared/: outbox_publisher.py  pagination.py  unit_of_work.py
backend/src/bootstrap/: container.py  event_handlers.py  events.py  startup.py
backend/src/cli/: __init__.py  __main__.py
backend/src/config/: settings.py
backend/src/domain/auth/: __init__.py  ports.py
backend/src/domain/contacts/: entities.py  events.py  repositories.py
backend/src/domain/conversations/: entities.py  repositories.py
backend/src/domain/documents/: __init__.py  entities.py  events.py  repositories.py  value_objects.py
backend/src/domain/invitations/: __init__.py  entities.py  events.py  repositories.py  value_objects.py
backend/src/domain/key_facts/: __init__.py  entities.py  repositories.py
backend/src/domain/llm/: usage_sink.py  value_objects.py
backend/src/domain/llm_usage/: pricing.py
backend/src/domain/notifications/: __init__.py  entities.py  ports.py  repositories.py
backend/src/domain/questions/: __init__.py  entities.py  events.py  repositories.py  value_objects.py
backend/src/domain/rag/: __init__.py  ports.py  value_objects.py
backend/src/domain/shared/: __init__.py  channel_result.py  entities.py  events.py  exceptions.py  media.py  utils.py  value_objects.py
backend/src/domain/telegram/: repositories.py
backend/src/domain/tenant_config/: __init__.py  entities.py  model_catalog.py  repositories.py  value_objects.py
backend/src/domain/tenants/: __init__.py  entities.py  events.py  operations.py  repositories.py  value_objects.py
backend/tests/: conftest.py  test_health.py
backend/tests/integration/: test_admin_api.py  test_admin_cli_and_startup.py  test_auth_flow.py  test_auth_refresh.py  test_chat_api.py  test_conversations_api.py  test_conversations_routes.py  test_coverage_gaps_integration.py  test_document_use_cases.py  test_documents_api.py  test_documents_routes.py  test_e2e_rag.py  test_full_flow.py  test_i18n_responses.py  test_invitations_api.py  test_key_facts_crud.py  test_key_facts_routes.py  test_llm_usage.py  test_llm_usage_routes.py  test_message_dedup.py  test_questions_flow.py  test_questions_routes.py  test_repos_crud.py  test_rls_enforcement.py  test_settings.py  test_settings_routes.py  test_tenant_isolation.py  test_tenants_api.py  test_tenants_routes.py  test_use_cases_direct.py  test_user_profile_api.py  test_users_routes.py
backend/tests/unit/: test_admin_cli_parser.py  test_agent_loop.py  test_ai_types.py  test_api_i18n.py  test_base_entity.py  test_bcrypt_hasher.py  test_change_password.py  test_channel_api.py  test_channel_base.py  test_channel_cache.py  test_channel_resolver.py  test_channel_retry.py  test_channel_sender.py  test_channel_telegram.py  test_channel_whatsapp.py  test_chat_api_handler.py  test_checkpoint.py  test_checkpoint_full.py  test_chunk_repo.py  test_chunker.py  test_circuit_breaker.py  test_circuit_breaker_full.py  test_close_question_use_case.py  test_concurrency.py  test_contact_repo.py  test_context_loader.py  test_contextualizer.py  test_conversation_entity_edges.py  test_conversation_value_objects.py  test_coverage_gaps.py  test_crypto.py  test_database.py  test_deliver_reply.py  test_dependencies.py  test_document_entity_edges.py  test_document_mime.py  test_document_repo.py  test_domain_entities.py  test_domain_error_handler.py  test_domain_shared_and_ports.py  (+78 more)
(+311 files in other folders)
