[project]
name = "frontdesk"
version = "0.1.0"
description = "Multi-tenant AI front desk — RAG-grounded answers with human-in-the-loop escalation"
requires-python = ">=3.13"
authors = [{ name = "Orwa Mahmoud", email = "orwa.mahmoud.uae@gmail.com" }]
license = { text = "MIT" }
readme = "../README.md"

dependencies = [
    # ── LLM orchestration ─────────────────────────────────────────
    # LangGraph for the per-turn state machine. LangChain for the
    # init_chat_model + tool primitives only; both are isolated to
    # infrastructure/llm and infrastructure/ai per DDD discipline.
    "langgraph>=1.0.8",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.0",
    "langchain-anthropic>=1.4.0",
    "langchain-google-genai>=2.1.0",
    # ── API ───────────────────────────────────────────────────────
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "python-multipart>=0.0.18",
    # ── Database + pgvector ───────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.4.0",
    # ── RAG: document parsing + chunking + retrieval ──────────────
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "markdown>=3.7",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.12.0",
    # ── Redis (thread locking, rate limit) ────────────────────────
    "redis[hiredis]>=6.0.0",
    # ── Channels (WhatsApp via Meta Cloud API + Telegram) ─────────
    "python-telegram-bot>=22.6",
    # ── Auth + utilities ──────────────────────────────────────────
    "pydantic[email]>=2.12.0",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.6",
    "structlog>=25.5.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "python-dateutil>=2.9.0",
    # ── Event bus + DI ────────────────────────────────────────────
    "blinker>=1.9.0",
    "dependency-injector>=4.48.3",
    "tenacity>=9.1.4",
    # ── Background tasks ──────────────────────────────────────────
    "celery[redis]>=5.6.0",
    # ── Observability ─────────────────────────────────────────────
    "prometheus-client>=0.22.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-instrumentation-asyncpg>=0.51b0",
    "sentry-sdk[opentelemetry]>=2.20.0",
    # ── Rate limiting ─────────────────────────────────────────────
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
    "httpx>=0.28.0",
    "types-python-dateutil>=2.9.0",
    "types-python-jose>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── ruff ──────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 120
exclude = ["alembic/versions", "docs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
    "PL",  # pylint
    "RUF", # ruff-specific
]
ignore = [
    "PLR0913", # too many args — DI containers have many
    "PLR2004", # magic numbers — fine for thresholds in config
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]
"alembic/env.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

# ── mypy ──────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

# ── pytest ────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: requires real Postgres + Redis",
]

# ── coverage ──────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["alembic/*", "tests/*", "scripts/*"]
