[project]
name = "frontdesk"
version = "0.1.0"
description = "Multi-tenant AI front desk — RAG-grounded answers with human-in-the-loop escalation"
requires-python = ">=3.13"
authors = [{ name = "Orwa Mahmoud", email = "orwa.mahmoud.uae@gmail.com" }]
license = { text = "MIT" }
readme = "../README.md"

dependencies = [
    # ── LLM orchestration ─────────────────────────────────────────
    "langgraph>=1.0.8",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.0",
    "langchain-anthropic>=1.4.0",
    # ── API ───────────────────────────────────────────────────────
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "python-multipart>=0.0.18",
    # ── Database + pgvector ───────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.4.0",
    # ── RAG: document parsing + chunking ──────────────────────────
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "tiktoken>=0.12.0",
    # ── Redis (thread locking, message queue) ─────────────────────
    "redis[hiredis]>=6.0.0",
    # ── Channels ──────────────────────────────────────────────────
    "python-telegram-bot>=22.6",
    # ── Auth + utilities ──────────────────────────────────────────
    "pydantic[email]>=2.12.0",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.0",
    "structlog>=25.5.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    # ── Event bus ─────────────────────────────────────────────────
    "blinker>=1.9.0",
    # ── Rate limiting ─────────────────────────────────────────────
    "slowapi>=0.1.9",
    # ── Observability ─────────────────────────────────────────────
    "prometheus-client>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
    "httpx>=0.28.0",
    "types-python-dateutil>=2.9.0",
    "types-python-jose>=3.3.0",
]
# Optional: ERD diagram generation (scripts/generate_erd.py). Pulls pygraphviz,
# which compiles against system graphviz (brew/apt install graphviz). Kept out of
# `dev` so the default install and CI don't need the graphviz toolchain.
#   uv sync --extra erd   then   uv run python scripts/generate_erd.py
erd = [
    "eralchemy2>=1.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── ruff ──────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 120
exclude = ["alembic/versions", "docs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
    "PL",  # pylint
    "RUF", # ruff-specific
]
ignore = [
    "PLR0913", # too many args — DI containers have many
    "PLR2004", # magic numbers — fine for thresholds in config
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101", "PLC0415", "N806"]
"alembic/env.py" = ["E402"]
# SQLAlchemy types like `UUID` are classes, but the constant-naming rule
# flags `UUID as PgUUID` re-imports — silence here for the ORM layer.
"src/infrastructure/persistence/postgres/models/*" = ["N811"]

[tool.ruff.format]
quote-style = "double"

# ── mypy ──────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "docx.*"]
ignore_missing_imports = true

# ── pytest ────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: requires real Postgres + Redis",
]

# ── coverage ──────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["alembic/*", "tests/*", "scripts/*"]
concurrency = ["greenlet", "thread"]
